forge/tests/error/malformed-test-double.frg
#lang forge

test expect {
  {} is sat for {} is sat
}